RESOLVED FIXED210940
Text manipulation does not account for text in fully clipped containers
https://bugs.webkit.org/show_bug.cgi?id=210940
Summary Text manipulation does not account for text in fully clipped containers
Wenson Hsieh
Reported 2020-04-23 15:50:57 PDT
Attachments
Patch (6.74 KB, patch)
2020-04-23 16:34 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-04-23 16:34:45 PDT
EWS
Comment 2 2020-04-23 17:07:29 PDT
Committed r260609: <https://trac.webkit.org/changeset/260609> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397396 [details].
Note You need to log in before you can comment on or make changes to this bug.